# bilibili-anime

./: .gitignore  Cargo.toml  README.md
src/: anime.rs  cli.rs  main.rs  request.rs  star.rs
