[package]
name = "bilibili-anime"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
clap = "3.0.0-beta.2"
chrono = "0.4"
